--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,19 +5,16 @@ project(MyDoc VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+include(GNUInstallDirs)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY
+  ${CMAKE_CURRENT_SOURCE_DIR}/arch)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY
+  ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/delivery)
 
-find_package(Qt6 REQUIRED COMPONENTS Core)
+# defines targets and sources
+add_subdirectory(src)
 
-#qt_standard_project_setup()
-
-add_executable(MyDoc
-    main.cpp
-)
-
-target_link_libraries(MyDoc PRIVATE Qt6::Core)
-
-set_target_properties(MyDoc PROPERTIES
-    WIN32_EXECUTABLE ON
-    MACOSX_BUNDLE ON
-)
+# enable testing and define tests
+#enable_testing()
+#add_subdirectory(tests)
